--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -43,7 +44,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.4",
-    "babel" : "@babel/plugin-proposal-private-property-in-object"
+    "babel": "@babel/plugin-proposal-private-property-in-object",
+    "tailwindcss": "^3.4.4"
   }
 }
